src/objects/CAREDataTransferResponses__c.object
<CustomObject>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wguainfid__c</fullName>
        <label>Wguainfid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CARE Data Transfer Responses</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RES-{0}</displayFormat>
        <label>CARE Data Transfer Responses Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CARE Data Transfer Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>